# jlens

./: Cargo.toml  README.md
benches/: baseline.md  bench.sh  bench_parse.rs  generate_fixtures.py
src/: app.rs  config.rs  event.rs  finder.rs  input.rs  keymap.rs  main.rs  preview.rs  search.rs  theme.rs  ui.rs  util.rs
src/app/: diff.rs  export.rs  filter.rs  search.rs  terminal.rs
src/diff/: algo.rs  mod.rs  view.rs
src/filter/: eval.rs  mod.rs  parse.rs
src/model/: lazy.rs  mod.rs  node.rs
src/parser/: detect.rs  full.rs  mmap.rs  mod.rs  scan.rs  streaming.rs
src/views/: graph.rs  mod.rs  path.rs  raw.rs  schema.rs  stats.rs  table.rs  tree.rs
