[package]
name = "jlens"
version = "0.1.0"
edition = "2021"
description = "Ultra-performant terminal JSON viewer"
authors = ["Asgarrrr"]
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = "1"
serde_json = "1"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
unicode-width = "0.2"
humansize = "2"
arboard = "3"
regex = "1"

[features]
simd = ["dep:simd-json"]

[dependencies.simd-json]
version = "0.14"
optional = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
